[gd_scene load_steps=4 format=2]

[ext_resource path="res://content/gamemode/unlockables/UnlockablesPanel.gd" type="Script" id=1]
[ext_resource path="res://gui/fonts/FontLarge.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/theme.tres" type="Theme" id=6]

[node name="UnlockablesPanel" type="PanelContainer"]
margin_right = 590.0
margin_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 6 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 599.0
margin_bottom = 408.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 571.0
margin_bottom = 380.0

[node name="Label1" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 555.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "level.gameover.unlockpicker.title"
align = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 53.0
margin_right = 534.0
margin_bottom = 78.0
text = "Y"
autowrap = true

[node name="Options" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 555.0
margin_bottom = 53.0
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 555.0
margin_bottom = 126.0

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_right = 250.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "level.gameover.back"

[node name="ProceedButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 266.0
margin_right = 555.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "level.gameover.continue"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/ProceedButton" to="." method="_on_ProceedButton_pressed"]
